# application-template

./: CMakeLists.txt  README.md  update_cmake.sh
include/example/: my_object.hpp
src/: main.cpp  my_object.cpp
test/: main.cpp  my_test.cpp
